--- a/index.html
+++ b/index.html
@@ -412,11 +412,11 @@
                         <label for="go-nogo-complete">Go/No-Go Checklist Completed</label>
                     </div>
                 </fieldset>
-            
+
             <!-- Buttons -->
                 <div class="form-buttons">
                     <button type="submit" id="submit-btn">Save Checklist</button>
-                    <button type="button" id="pdf-btn">Download PDF</button>
+                    <button type="button" id="txt-btn">Download .txt Summary</button>
                     <button type="button" id="reset-btn">Reset</button>
                 </div>
 
